service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: psapp
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: psapp
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
