service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: psapp
  namespace: default
spec:
  type: NodePort
  selector:
    app: psapp
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    nodePort: 30011
